--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "gufoe/coverage-reporter",
-    "description": "A PHP library for generating HTML code coverage reports using Xdebug",
+    "description": "A minimal, type-safe PHP library for generating beautiful HTML code coverage reports using Xdebug.",
     "type": "library",
     "license": "MIT",
     "authors": [
@@ -11,7 +11,8 @@
     ],
     "require": {
         "php": ">=8.1",
-        "ext-xdebug": "*"
+        "ext-xdebug": "*",
+        "nikic/php-parser": "^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
