--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,7 @@
 parameters:
-    level: 5
+    level: 8
     paths:
         - src
         - tests
+    treatPhpDocTypesAsCertain: false
+    checkMissingIterableValueType: false
